Fix overlapping history bar

--- a/assets/history-bar.css
+++ b/assets/history-bar.css
@@ -1,10 +1,18 @@
 #history-bar {
     max-width: 200px;
+    max-height: 100%;
+    overflow-y: auto;
     align-items: end;
     margin-right: 0;
     float: right;
     overflow-x: hidden;
     transition: max-width 0.3s ease;
+    font-weight: normal;
+}
+
+.overflow-y-auto {
+    overflow-y: auto;
+    max-height: 100%;
 }
 
 #history-bar.active {
