--- a/assets/main.css
+++ b/assets/main.css
@@ -9,10 +9,23 @@
     -webkit-user-select: none;
 }
 
+html {
+    height: 100vh;
+    max-height: 100vh;
+    overflow-y: hidden;
+}
+
+#main {
+    max-height: 100%;
+}
+
 #body {
     display: flex;
     flex-direction: row;
     width: 100%;
+    height: 100%;
+    max-height: 100vh;
+    overflow-y: hidden;
 }
 
 body {
@@ -52,6 +65,10 @@ body {
     background-color: black;
 }
 
+.justify-content-start {
+    justify-content: start;
+}
+
 .justify-content-center {
     justify-content: center;
 }
@@ -85,4 +102,8 @@ table {
 button {
     width: 100px;
     height: 50px;
+}
+
+.font-normal {
+    font-weight: normal;
 }
